# maixpy-mcp-server

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHECKLIST.md  COMMANDS_REFERENCE.md  DOCKER_COMMANDS.md  DOCKER_INFO.txt  DOCKER_QUICKSTART.md  DOCKER_RUNNING.txt  Dockerfile  PROJECT_INFO.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  USAGE_EXAMPLES.md  docker-compose.yml  docker-start.bat  docker-start.sh  pyproject.toml  requirements.txt  run_tests.bat  run_tests.ps1  vscode_mcp_config.json
doc_md/api/: README.md
doc_md/api/maix/: ahrs.md  app.md  audio.md  camera.md  comm.md  display.md  ext_dev.md  fs.md  image.md  log.md  nn.md  peripheral.md  pipeline.md  sys.md  tensor.md  touchscreen.md  tracker.md  util.md  video.md
doc_md/api/maix/ext_dev/: cmap.md  imu.md  lsm6dsowtr.md  pmu.md
doc_md/api/maix/peripheral/: adc.md  pinmap.md  spi.md
doc_md/doc/zh/peripheral/: spi.md
mcp_server/: __init__.py  server.py
tests/: test_server.py
